--- a/static/css/style.css
+++ b/static/css/style.css
@@ -502,19 +502,19 @@ h6,
 
     /* Styling the scrollbar track (the background) */
     ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #0e2494;
     border-radius: 5px;
     }
 
     /* Styling the scrollbar thumb (the draggable handle) */
     ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #cfbb06;
     border-radius: 5px;
     }
 
     /* Styling the scrollbar thumb on hover */
     ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #9e8f0a;
     }
 
     /* Styling the scrollbar corner (where horizontal and vertical meet) */
