--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,13 @@
         {% if hero_sliders %}
         <title>{{ hero_sliders.title_site_ar }}</title>
         {% else %}
-        <title>codeamyway mmmmm</title>
+        <title>codeamyway</title>
         {% endif %}
     {% else %}
         {% if hero_sliders %}
         <title>{{ hero_sliders.title_site }}</title>
         {% else %}
-        <title>codeamyway mmmmm</title>
+        <title>codeamyway</title>
         {% endif %}
     {% endif %}
 
