--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -3,7 +3,6 @@
 {% load i18n %}
 
 {% block content_en %}
-
     <!-- Header Carousel Start /hero -->
     {% include "hero/home_hero_en.html" %}
     <!-- end Header Carousel Start /hero -->
@@ -11,7 +10,6 @@
     <!-- Facts Start -->
     {% include "CoreFactsStart.html" %}
     <!-- Facts Start -->
-
 
     <!-- About Start -->
     {% include "corepage.html" %}
@@ -21,87 +19,9 @@
     {% include "maincore.html" %}
     <!-- Features Start -->
 
-
     <!-- Service Start -->
-    <div id="services" class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-                <h5 class="fw-bold text-warning text-uppercase">Our Services</h5>
-                <h1 class="mb-0">Custom IT Solutions for Your Successful Business</h1>
-            </div>
-            <div class="row g-5">
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-shield-alt text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Cyber Security</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-chart-pie text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Data Analytics</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-code text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Web Development</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fab fa-android text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Apps Development</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-search text-white"></i>
-                        </div>
-                        <h4 class="mb-3">SEO Optimization</h4>
-                        <p class="m-0">Amet justo dolor lorem kasd amet magna sea stet eos vero lorem ipsum dolore sed</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                    <div class="position-relative bg-warning rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
-                        <h3 class="text-white mb-3">Call Us For Quote</h3>
-                        <p class="text-white mb-3">Clita ipsum magna kasd rebum at ipsum amet dolor justo dolor est magna stet eirmod</p>
-                        <h2 class="text-white mb-0">+0{{ info_contact.phone_contact }}</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "home_main/services_main.html" %}
     <!-- Service End -->
-
 
     <!-- Pricing Plan Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -173,7 +93,6 @@
     </div>
     <!-- Pricing Plan End -->
 
-
     <!-- Quote Start -->
     {% include "contact_main_en.html" %}
     <!-- Quote End -->
@@ -242,7 +161,6 @@
     </div>
     <!-- Team End -->
 
-
     <!-- Blog Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -307,7 +225,6 @@
     </div>
     <!-- Blog Start -->
 
-
     <!-- Vendor Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5 mb-5">
@@ -349,96 +266,7 @@
     <!-- ميزات End -->
 
     <!-- خدماتنا Start -->
-    <div id="services" class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
-        <div class="container py-5">
-            <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-                <h5 class="fw-bold text-warning text-uppercase">خدماتنا</h5>
-                <h1 class="mb-0">حلول تقنية مخصصة لنجاح أعمالك</h1>
-            </div>
-            <div class="row g-5">
-                
-                <!-- الأمن السيبراني -->
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-shield-alt text-white"></i>
-                        </div>
-                        <h4 class="mb-3">الأمن السيبراني</h4>
-                        <p class="m-0">نحمي بياناتك وأنظمتك من أي تهديدات إلكترونية محتملة.</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- تحليل البيانات -->
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-chart-pie text-white"></i>
-                        </div>
-                        <h4 class="mb-3">تحليل البيانات</h4>
-                        <p class="m-0">نحوّل بياناتك إلى تقارير دقيقة تساعدك في اتخاذ قرارات ناجحة.</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- تطوير المواقع -->
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-code text-white"></i>
-                        </div>
-                        <h4 class="mb-3">تطوير المواقع</h4>
-                        <p class="m-0">نصمم ونطور مواقع احترافية تليق بعملك وتحقق أهدافك.</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- تطوير التطبيقات -->
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fab fa-android text-white"></i>
-                        </div>
-                        <h4 class="mb-3">تطوير التطبيقات</h4>
-                        <p class="m-0">نطور تطبيقات موبايل مبتكرة تعمل على جميع الأنظمة.</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- تحسين محركات البحث -->
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon">
-                            <i class="fa fa-search text-white"></i>
-                        </div>
-                        <h4 class="mb-3">تحسين محركات البحث</h4>
-                        <p class="m-0">نساعدك في رفع ترتيب موقعك ليظهر في النتائج الأولى على جوجل.</p>
-                        <a class="btn btn-lg btn-warning rounded" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- اتصل بنا -->
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                    <div class="position-relative bg-warning rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
-                        <h3 class="text-white mb-3">اتصل بنا لطلب عرض سعر</h3>
-                        <p class="text-white mb-3">فريقنا جاهز لتقديم أفضل الحلول التقنية التي تناسب عملك.</p>
-                        <h2 class="text-white mb-0">+0{{ info_contact.phone_contact }}</h2>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
+    {% include "home_main/services_main_ar.html" %}
     <!-- خدماتنا End -->
 
     <!--  خطط الأسعارStart -->
