--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -21,7 +21,7 @@
                 <div class="navbar-nav me-auto py-0 text-end" style="width: max-content;">
                     <a href="{% url 'core:home' %}" class="nav-item nav-link active">الرئيسية</a>
                     <a href="{% if home %}#about{% else %}{% url 'core:home' %}#about{% endif %}" class="nav-item nav-link">من نحن</a>
-                    <a href="{% if home %}#services{% else %}{% url 'core:home' %}#services{% endif %}" class="nav-item nav-link">الخدمات</a>  
+                    <a href="{% if home %}#services{% else %}{% url 'services' %}#services{% endif %}" class="nav-item nav-link">الخدمات</a>  
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المدونة</a>
                         <div class="dropdown-menu m-0 text-end">
